started computationl chapter

--- a/document/03-musical-parameters.Rmd
+++ b/document/03-musical-parameters.Rmd
@@ -2,6 +2,8 @@
 
 OTHER PEOPLE WHO HAVE DONE THIS
 
+* look into Wiggins et al., 1993, for history of representation 
+
 Folk music
 
 * Bartok 1936?
